# provotum-mixnet

./: .vscode.code-workspace  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: build.yml  crypto.yml  crypto_dev.yml  crypto_prod.yml  randomizer.yml  security.yml  substrate.yml  substrate_dev.yml  substrate_prod.yml  test_client_dev.yml  wasm-pack.yml
bc-client/: Cargo.toml
bc-client/src/: calls.rs  main.rs  random.rs  stores.rs
bc-node/: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  customLocalChainSpec.json  customLocalChainSpecRaw.json  docker-compose.yml
bc-node/node/: Cargo.toml
bc-node/node/src/: chain_spec.rs  rpc.rs  service.rs
bc-node/pallets/mixer/: Cargo.toml
bc-node/pallets/mixer/src/: keys.rs  lib.rs  mock.rs  tests.rs  types.rs
bc-node/pallets/mixer/src/helpers/: ballot.rs  mod.rs  proofs.rs  random.rs
bc-node/pallets/mixer/src/logic/: mod.rs  offchain.rs
bc-node/pallets/mixer/src/shuffle/: mod.rs  prover.rs  shuffle.rs  verifier.rs
bc-node/pallets/mixnet/: Cargo.toml
bc-node/pallets/mixnet/src/: bench.rs  init.rs  lib.rs  mock.rs  tests.rs  types.rs
bc-node/pallets/mixnet/src/dkg/: create.rs  helper.rs  mod.rs  tally.rs  verify.rs
bc-node/pallets/mixnet/src/helpers/: array.rs  assertions.rs  ballot.rs  keys.rs  math.rs  mod.rs  params.rs  phase.rs  random.rs
bc-node/pallets/mixnet/src/logic/: offchain.rs
bc-node/pallets/mixnet/src/offchain/: mod.rs  send.rs
bc-node/pallets/mixnet/src/shuffle/: mod.rs  prover.rs  shuffle.rs  verifier.rs
bc-node/pallets/template/: Cargo.toml
bc-node/pallets/template/src/: lib.rs  tests.rs  types.rs
bc-node/results/: 2021-01-07-1.txt  2021-01-13-1.txt
bc-node/runtime/: Cargo.toml
bc-node/runtime/src/: lib.rs  multiaddress.rs
bc-node/scripts/: docker_run.sh
bc-node/scripts/local-testnet/: README.md
bc-node/scripts/local-testnet/ag/: ag.sh
bc-node/scripts/local-testnet/zh/: zh.sh
client/: .gitignore  Cargo.toml  README.md
client/src/: calls.rs  cli.rs  main.rs  random.rs  rpc.rs  va.rs  voter.rs  voting.rs
client/src/cli/: cli.rs
client/src/voting/: sealer.rs  substrate.rs  va.rs  voter.rs
client/src/voting/substrate/: calls.rs  rpc.rs  stores.rs
crypto/: .gitignore  Cargo.toml  README.md
crypto/benches/: benchmarks.rs
crypto/results/: 2020-02-25-1.txt  2020-03-15-1.txt  2020-03-16-10.txt  2020-03-16-100.txt  2020-03-16-1000.txt  2020-03-16-10000-not-encoded.txt  2020-03-16-10000.txt  2020-03-16-decoding.txt
crypto/src/: encryption.rs  helper.rs  lib.rs  proofs.rs  random.rs  types.rs
crypto/src/elgamal/: encryption.rs  helper.rs  mod.rs  prime.rs  random.rs  system.rs  types.rs
crypto/src/proofs/: decryption.rs  keygen.rs  mod.rs  re_encryption.rs  shuffle.rs
node/: .dockerignore  Cargo.toml  Dockerfile  README.md  customLocalChainSpec.json  customLocalChainSpecRaw.json
node/node/: Cargo.toml
node/node/src/: command.rs  main.rs  rpc.rs
node/pallets/mixnet/: Cargo.toml
node/pallets/mixnet/src/: bench.rs  keys.rs  lib.rs  mock.rs  tests.rs  types.rs
node/pallets/mixnet/src/dkg/: mod.rs  tally.rs  verify.rs
node/pallets/mixnet/src/helpers/: ballot.rs
node/pallets/mixnet/src/shuffle/: prover.rs  verifier.rs
node/results/: 2021-01-13-2.txt  2021-01-13-3.txt  2021-01-20-1.txt  2021-02-11-1.txt  2021-03-16-2.txt
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/scripts/local-testnet/ag/: ag.sh
node/scripts/local-testnet/chainSpec/: local.json  localRaw.json
node/scripts/local-testnet/zh/: zh.sh
randomizer/: Cargo.toml  Dockerfile  README.md
randomizer/src/: health.rs  helper.rs  index.rs  main.rs  randomize.rs  randomizer.rs
src/: lib.rs
wasm-app/: .gitignore  package-lock.json  package.json  tailwind.config.js  webpack.config.js
wasm-app/src/: index.html  index.js
wasm-pkg/: Cargo.toml  README.md  wasm-bindgen.md  wasm-pack.md  webdriver.json
wasm-pkg/src/: lib.rs
wasm-pkg/tests/: node.rs
