[package]
name = "bc-client"
version = "0.1.0"
authors = ["Moritz Eck"]
edition = "2018"

[dependencies]
async-std = {version = "1.8.0", features= ["attributes"]}
sp-keyring = "2.0.1"
substrate-subxt = '0.14.0'
env_logger = "0.8.2"
codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive"] }
num-bigint = { default-features = false, version = "^0.3", features = ["rand"] }
num-traits = { default-features = false, version = "^0.2" }

# crypto library from crypto crate
crypto = { path = "../crypto" }
pallet-mixnet = { path = "../bc-node/pallets/mixnet", version = "2.0.1" }
provotum-runtime = { path = '../bc-node/runtime', version = '2.0.1' }