[package]
name = "client"
version = "0.1.0"
authors = ["Moritz Eck"]
edition = "2018"

[dependencies]
async-std = { version = "1.8.0", features= ["attributes"] }
sp-keyring = "2.0.1"
substrate-subxt = '0.14.0'
env_logger = "0.8.2"
codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive"] }
num-bigint = { version = "^0.3", features = ["rand"] }
num-traits = { version = "^0.2" }
rand = { version = "^0.7" }

# crypto library from crypto crate
crypto = { path = "../crypto", features = ["std"] }
pallet-mixnet = { path = "../node/pallets/mixnet", version = "2.0.1" }