[package]
name = "crypto"
description = "a simple crypto library (ElGamal)"
version = "0.1.0"
authors = ["Moritz Eck <moritz.eck@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/meck93/provotum-mixnet/crypto"
readme = "README.md"

[lib]
name = "crypto"
path = "src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
num-bigint = { version = "0.3.0", default-features = false, features = ["rand"] }
num-integer = { version = "^0.1", default-features = false }
num-traits = { version = "^0.2", default-features = false }
blake2 = { version = "0.9.0", default-features = false }
sha2 = { version = "0.9.0", default-features = false }

[dev-dependencies]
criterion = "0.3"

[features]
std = [
    'num-bigint/std',
    'num-integer/std',
    'num-traits/std',
    'blake2/std',
    'sha2/std'
]