[package]
name = "crypto"
description = "a simple crypto library (ElGamal)"
version = "0.1.0"
authors = ["Moritz Eck <moritz.eck@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/meck93/provotum-mixnet/crypto"
readme = "README.md"

[lib]
name = "crypto"
path = "src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
num-bigint = { version = "^0.3", default-features = false, features = ["rand"] }
num-traits = { version = "^0.2", default-features = false }

[dev-dependencies]
criterion = "0.3"

[features]
std = [
    'num-bigint/std',
    'num-traits/std'
]