[package]
name = "crypto"
description = "a simple crypto library (ElGamal)"
version = "0.2.0"
authors = ["Moritz Eck <moritz.eck@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/meck93/provotum-mixnet/crypto"
readme = "README.md"

[lib]
name = "crypto"
path = "src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
num-bigint = { version = "^0.3", default-features = false, features = ["rand", "serde"] }
num-traits = { version = "^0.2", default-features = false }
blake2 = { version = "^0.9", default-features = false }
criterion = { version = "^0.3", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rand = { version = "^0.7" }

[features]
std = [
    'num-bigint/std',
    'num-traits/std',
    'serde/std',
]

bench = ["criterion"]
