[package]
name = "randomizer"
version = "0.1.0"
authors = ["Moritz Eck <moritz.eck@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
num-bigint = { version = "^0.3", features = ["rand", "serde"] }
num-traits = "^0.2"
rand = "^0.7"

# crypto library from crypto crate
crypto = { path = "../crypto" }

[dev-dependencies]
actix-rt = "2"

[[bin]]
name = "randomizer"
path = "src/main.rs"