[package]
name = "wasm-package"
description = "wasm-package"
version = "0.1.0"
authors = ["Moritz Eck <moritz.eck@gmail.com>"]
edition = "2018"
license = "MIT"

# `wasm-opt` is on for the release profile
# only works with custom: wasm-pack (built from source)
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.68"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size compared to the default allocator's ~10K. It is slower than the default allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

# bigint library (developed by Parity)
primitive-types = "0.7.2"
uint = "0.8.5"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
