[package]
authors = ['Moritz Eck']
description = 'Off-Chain Mixer for Provotum E-Voting System.'
edition = '2018'
homepage = 'https://github.com/meck93/provotum-mixnet'
license = 'Unlicense'
name = 'pallet-mixnet'
repository = 'https://github.com/meck93/provotum-mixnet/node'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }

# to be able to use randomness in offchain-worker
rand_chacha = { default_features = false, version = '0.2.2' }
rand = { default-features = false, version = "^0.7.3" }
num-bigint = { default-features = false, version = "^0.3", features = ["rand"] }
num-traits = { default-features = false, version = "^0.2" }

# to be able to use Vec
sp-std = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

# crypto library from crypto crate
crypto = { default-features = false, path = "../../../crypto" }

serde = { version = '^1', default-features = false, features = ["derive"] }
hex-literal = { version = "^0.3" }

# benchmarking
frame-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
sp-session = { default-features = false, version = '2.0.1' }

[dev-dependencies]
parking_lot = { version = '0.10' }

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-io/std',    
    'sp-session/std',
    'pallet-timestamp/std',
    'rand_chacha/std',
    'rand/std'
]
